--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -6,4 +6,5 @@
     display: flex;
     flex-wrap: wrap;
     margin: 25px;
+    overflow-x: scroll;
 }
